--- a/templates/book_details_layout.html
+++ b/templates/book_details_layout.html
@@ -12,15 +12,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans&family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Montserrat';
-    }
-</style>
-<body>
+<body style="font-family: 'Montserrat';">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,28 +36,9 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
-    </nav>
-
-    <div class="container">
-        <h2 style="text-align: center;">Books List</h2>
-        <table class="table table-hover">
-            <thead class="thead-light">
-                <tr>
-                    <th>isbn</th>
-                    <th>Title</th>
-                    <th>Author</th>
-                </tr>
-            </thead>
-            {% for id, isbn, title, author, year in books %}
-                <tbody>
-                    <tr>
-                        <td><a href="{{ url_for('isbn', isbn=isbn) }}">{{ isbn }}</a></td>
-                        <td><a href="{{ url_for('title', title=title) }}">{{ title }}</a></td>
-                        <td><a href="{{ url_for('author', author=author) }}">{{ author }}</a></td>
-                    </tr>
-                </tbody>
-            {% endfor %}
-        </table>
-    </div>
+      </nav>
+      
+      {% block body %}
+      {% endblock %}
 </body>
 </html>
