--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,32 +47,56 @@
     .main a:hover {
       background-color: rgb(40, 167, 69);
     }
+    @media only screen and (max-width: 1200px) {
+      .main {
+            min-height: 100vh;
+            min-width: 100vw;
+            z-index: -1;
+        }
+        .contents {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            padding: 0 10vw;
+        }
+    }
 </style>
 <body>
+  <section>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('books') }}">Books</a>
-            </li>
+      <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('books') }}">Books</a>
+          </li>
+
+          {% if user_in_session == False %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('login') }}">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>
             </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="isbn, title or author" aria-label="Search">
+          <form action="{{ url_for('results') }}" method="POST" class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" name="search_input" placeholder="isbn, title or author" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
-        </div>
-      </nav>
+          {% endif %}
+      </div>
+    </nav>
+  </section>
 
       {% block body %}
       {% endblock %}
