--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,15 @@
     <div class="box">
         <div class="contents">
             <h1>Login</h1>
-            <form action="{{ url_for('index') }}">
+            <form method="POST">
                 <div class="input-box">
-                    <input type="text" placeholder="Username" name="username" required>
+                    <input id="username" type="text" placeholder="Username" name="username" required>
+                    <h6 class="error">{{ username_error }}</h6>
                 </div>
 
                 <div class="input-box">
-                    <input type="text" placeholder="Password" name="password" required>
+                    <input type="password" placeholder="Password" name="password" required>
+                    <h6 class="error">{{ password_error }}</h6>
                 </div>
 
                 <button class="submit">Login</button>
