--- a/templates/register.html
+++ b/templates/register.html
@@ -4,21 +4,30 @@
     <div class="box">
         <div class="contents">
             <h1>Sign Up</h1>
-            <form action="{{ url_for('login') }}">
+            <form method="POST">
                 <div class="input-box">
-                    <input type="text" placeholder="Username" name="username" required>
+                    <input type="text" placeholder="Username" name="username" value="{{ request.form.username }}" required>
+                    <h6 class="error">{{ username_error }}</h6>
+                </div>
+
+                <div style="margin-bottom: 10px;" class="input-box">
+                    <input type="password" placeholder="Password" name="password" value="{{ request.form.password }}" required>
                 </div>
 
                 <div class="input-box">
-                    <input type="password" placeholder="Password" name="password" required>
-                </div>
-
-                <div class="input-box">
-                    <input type="password" placeholder="Confirm Password" name="password" required>
+                    <input type="password" placeholder="Confirm Password" name="confirm_password" value="{{ request.form.confirm_password }}" required>
+                    <h6 class="error">{{ password_error }}</h6>
                 </div>
 
                 <button class="submit">Sign Up</button>
             </form>
+
+            <span>
+                Already have an account?
+                <a style="text-decoration: none;" class="text-success" href="{{ url_for('login') }}">
+                    Log in.
+                </a>
+            </span>
         </div>
     </div>
 {% endblock %}
