--- a/templates/author_info.html
+++ b/templates/author_info.html
@@ -1,45 +1,127 @@
 {% extends "book_details_layout.html" %}
 
 {% block body %}
-    <div class="author-info">
-        <div class="image">
-            <img src="{{ img }}" alt="Image unavailable">
-        </div>
-        
-        <div class="info">
-            <div class="text">
-                <h3>{{ author }}</h3>
-                <p>
-                    {{ author_info }}
-                    <a href="{{ url }}" target="_blank">Wikipedia</a>
-                </p>
+<style>
+    body {
+        background-color: rgba(211, 211, 211, 0.1);
+    }
+    .author-info {
+        margin: 5% 5%;
+        display: flex;
+        justify-content: center;
+        border-radius: 10px;
+    }
+    .author-info .image {
+        height: 300px;
+        width: 30%;
+        border-radius: 20px;
+    }
+    .author-info .image img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border-radius: 10px;
+    }
+    .author-info .info {
+        width: 60%;
+        margin: auto;
+        text-align: center;
+    }
+    .books {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .book {
+        width: 29.333%;
+        margin: 4% 2%;
+        border-radius: 20px;
+        padding: 10px;
+    }
+    .book-cover {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+    }
+    .container {
+        background-color: #ffffff;
+    }
+    @media only screen and (max-width: 992px) {
+        .book {
+            width: 46%;
+        }
+    }
+    @media only screen and (max-width: 767px) {
+        .book {
+            width: 96%;
+        }
+    }
+    @media only screen and (max-width: 600px) {
+        .book {
+            width: 96%;
+        }
+        .author-info {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            border-radius: 10px;
+            flex-direction: column;
+        }
+        .author-info .info {
+            width: 100%;
+            text-align: start;
+        }
+        .author-info .info .text h3 {
+            text-align: center;
+        }
+        .author-info .image {
+            width: 100%;
+            height: 200px;
+        }
+    }
+</style>
+    <div class="container">
+        <div class="author-info">
+            <div class="image">
+                <img src="{{ img }}" alt="Image unavailable" style="border-radius: 20px;">
+            </div>
+            
+            <div class="info">
+                <div class="text">
+                    <h3>{{ author }}</h3>
+                    <p>
+                        {{ author_info }}
+                        <a href="{{ url }}" target="_blank">Wikipedia</a>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="books">
-        <h3 style="padding: 10px;">Author's Work</h3>
-        {% for id, isbn, title, author, year in books %}
-            <div class="book">
-                <div class="book-cover">
-                    <img src="http://covers.openlibrary.org/b/isbn/{{ isbn }}-S.jpg" alt="No image available">
+        <h3 style="text-align: center; padding: 10px;">Author's Work</h3>
+        <div class="books">
+            {% for id, isbn, title, author, year in books %}
+                <div class="book">
+                    <div class="book-cover">
+                        <img src="http://covers.openlibrary.org/b/isbn/{{ isbn }}-S.jpg" alt="No image available">
+                        <h5 style="padding: 0 10px;">
+                            <a style="color: #000000;" href="{{ url_for('title', title=title) }}">{{ title }}</a>
+                        </h5>
+                    </div>
+                    <div class="book-title">
+                        <br>
+                        <span>
+                            Published: {{ year }}
+                        </span>
+                        <br>
+                        <span>
+                            Rating: {{ data[isbn]["average_rating"] }} / 5
+                        </span>
+                        <br>
+                        <span>{{ data[isbn]["working_rating"] }} people have rated this book.</span>
+                    </div>
                 </div>
-                <div class="book-title">
-                    <h5>
-                        <a style="color: #000000;" href="{{ url_for('title', title=title) }}">{{ title }}</a>
-                    </h5>
-                    <br>
-                    <span>
-                        Published: {{ year }}
-                    </span>
-                    <br>
-                    <span>
-                        Rating: {{ data[isbn]["average_rating"] }} / 5
-                    </span>
-                    <br>
-                    <span>{{ data[isbn]["working_rating"] }} people have rated this book.</span>
-                </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
