--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -16,7 +16,7 @@
             {% else %}
                 <form action="{{ url_for('results') }}" method="POST" class="mx-2 my-auto d-inline w-100">
                     <div class="input-group">
-                        <input type="text" class="form-control border border-right-0" name="search_input" placeholder="Title, Author, or isbn">
+                        <input type="text" class="form-control border border-right-0" name="search_input" placeholder="Title, Author, or isbn" autocomplete="off">
                         <span class="input-group-append">
                             <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
                         </span>
