--- a/templates/login.html
+++ b/templates/login.html
@@ -6,12 +6,12 @@
             <h1>Login</h1>
             <form method="POST">
                 <div class="input-box">
-                    <input id="username" type="text" placeholder="Username" name="username" required>
+                    <input id="username" type="text" placeholder="Username" name="username" value="{{ request.form.username }}" required>
                     <h6 class="error">{{ username_error }}</h6>
                 </div>
 
                 <div class="input-box">
-                    <input type="password" placeholder="Password" name="password" required>
+                    <input type="password" placeholder="Password" name="password" value="{{ request.form.password }}" required>
                     <h6 class="error">{{ password_error }}</h6>
                 </div>
 
