Ran into an error when trying to get the reviews from the database and display it in the webapp.

--- a/templates/book_info.html
+++ b/templates/book_info.html
@@ -153,6 +153,10 @@
                             </div>
                         </div>
                     {% endif %}
+
+                    {% for review, date in reviews %}
+                        {{ review }}
+                    {% endfor %}
                 </div>
             {% endfor %}
         </div>
