The reviews page now displays the reviews submitted by a user, the date it was submitted and the name of the user. The SQL queries in the python code were formatted to accept apostrophes. The book_info.html is now more responsive.

--- a/templates/author_info.html
+++ b/templates/author_info.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="book-title" style="padding: 0 10px;">
                         <h5>
-                            <a style="color: #000000;" href="{{ url_for('title', title=title) }}"><strong>{{ title }}</strong></a>
+                            <a style="color: #000000;" href="{{ url_for('title', title=title, author=author) }}"><strong>{{ title }}</strong></a>
                         </h5>
                         <span style="font-size: 0.9rem;">
                             Published: {{ year }}
