--- a/templates/results.html
+++ b/templates/results.html
@@ -18,7 +18,7 @@
                         <tbody>
                             <tr>
                                 <td><img src="http://covers.openlibrary.org/b/isbn/{{ isbn }}-S.jpg" alt="No image available"></td>
-                                <td><a style="color: #000000;" href="{{ url_for('title', title=title) }}">{{ title }}</td>
+                                <td><a style="color: #000000;" href="{{ url_for('title', title=title, author=author) }}">{{ title }}</td>
                                 <td><a style="color: #000000;" href="{{ url_for('author', author=author) }}">{{ author }}</td>
                                 <td>{{ year }}</td>
                             </tr>
